infrastructure/controllers/longhorn/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: local-hejsan-xyz-tls
